--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
 
-    <meta charset="utf-8">
+    <title>Forest Water NJ - Purified Drinking Water</title>
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Clean Filtered Purified Water Drink">
-    <meta name="author" content="Forest Water">
-
-    <title>Forest Water</title>
-
+    <meta name="description" content="Purified drinking water in New Jersey - Forest Water.">
+    <meta name="author" content="Joab Arzua">
+	<meta name="keywords" content="purified water, drinking water, clean water, water, west new york, new jersey"> 
+	<link rel="icon" href="favicon.ico" />
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -52,9 +52,6 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Prices</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -80,7 +77,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Drink to better health</h2>
                     <hr class="light">
-                    <p class="text-faded">Clean drinking water is essential to living a healthy life. Let us supply it for you.</p>
+                    <p class="text-faded">Clean drinking water is essential to living a healthy life. <br> Be it at home, in the workplace, or on the go, we can supply it for you.</p>
                 </div>
             </div>
         </div>
@@ -101,21 +98,21 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
                         <h3>Pure</h3>
-                        <p class="text-muted">Cutting-edge filter system removes harmful chemicals from your water.</p>
+                        <p class="text-muted">Cutting-edge filter removes bad chemicals from your water.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-tint text-primary sr-icons"></i>
                         <h3>Refreshing</h3>
-                        <p class="text-muted">Cleaner water tastes better and promotes a healthy lifestyle.</p>
+                        <p class="text-muted">Cleaner water tastes better and keeps you hydrated for longer.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-usd text-primary sr-icons"></i>
                         <h3>Affordable</h3>
-                        <p class="text-muted">Cheaper than bottled water by the gallon!</p>
+                        <p class="text-muted">Cheaper than most water brands by the gallon saves you money.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -144,29 +141,26 @@
             </div>
         </div>
     </section>
-
-    <aside class="bg-dark">
+<aside class="bg-dark">
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
-                    <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <h2 class="section-heading">Call or visit us!</h2><hr class="light">
+                    <p>We are open Monday-Saturday, 8AM–7PM. We look forward to seeing you!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
+                    <p>201-295-2085</p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:forestwater@gmail.com">forestwater@gmail.com</a></p>
+                    <i class="fa fa-map-marker fa-3x sr-contact"></i>
+					<p><a href="https://goo.gl/maps/rjbKFhEipTD2" class="nodec">Google Map</a></p>
                 </div>
             </div>
         </div>
     </section>
-    </aside>
-
+</aside>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
