--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Purified drinking water in New Jersey - Forest Water.">
     <meta name="author" content="Joab Arzua">
 	<meta name="keywords" content="purified water, drinking water, clean water, water, west new york, new jersey"> 
-	<link rel="icon" href="favicon.ico" />
+	<link rel="icon" href="img/favicon.ico" />
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
