--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
             </div>
         </div>
     </section>
+	<div class="credits">Created by <a href="https://github.com/joabarzua">Joab Arzua</a></div>
 </aside>
 
     <!-- jQuery -->
